--- a/html/unique/user-profile.html
+++ b/html/unique/user-profile.html
@@ -1193,29 +1193,38 @@
                     </div>
                     <div class="card-body">
                       <ul class="flex flex-col gap-3"> 
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center suggest-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/14.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Tiana Baumbach</p><span class="text-content3 font-semibold text-2xs">Web Designer</span>
+                              <p class="text-title text-xs font-semibold">Tiana Baumbach</p><span class="text-content3 font-semibold text-2xs">Web Designer</span>
                             </div>
-                          </div><a class="btn btn-success btn-outline p-1 group" href="javascript:void(0)"> <i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="user-plus"> </i></a>
+                          </div><a class="btn btn-primary btn-outline p-1 group suggest-btn" href="javascript:void(0)">
+                            <svg class="w-4 h-4 stroke-primary group-hover:stroke-white"> 
+                              <use href="../../assets/svg/_sprite.svg#Profile"> </use>
+                            </svg></a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center suggest-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/19.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title text-xs font-semibold">Ally Kshlerin</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
-                          </div><a class="btn btn-success btn-outline p-1 group" href="javascript:void(0)"> <i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="user-plus"> </i></a>
+                          </div><a class="btn btn-primary btn-outline p-1 group suggest-btn" href="javascript:void(0)">
+                            <svg class="w-4 h-4 stroke-primary group-hover:stroke-white"> 
+                              <use href="../../assets/svg/_sprite.svg#Profile"> </use>
+                            </svg></a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center suggest-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/23.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Werner Barrows</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title text-xs font-semibold">Werner Barrows</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
-                          </div><a class="btn btn-success btn-outline p-1 group" href="javascript:void(0)"> <i class="w-4 h-4 stroke-success group-hover:stroke-white" data-feather="user-plus"> </i></a>
+                          </div><a class="btn btn-primary btn-outline p-1 group suggest-btn" href="javascript:void(0)">
+                            <svg class="w-4 h-4 stroke-primary group-hover:stroke-white"> 
+                              <use href="../../assets/svg/_sprite.svg#Profile"> </use>
+                            </svg></a>
                         </li>
                       </ul>
                     </div>
@@ -1228,29 +1237,29 @@
                     </div>
                     <div class="card-body">
                       <ul class="flex flex-col gap-3"> 
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center add-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/17.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Gretchen Harvey</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
+                              <p class="text-title text-xs font-semibold">Gretchen Harvey</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
+                          </div><a class="add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center add-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/16.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Raegan Corkery</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title text-xs font-semibold">Raegan Corkery</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
+                          </div><a class="add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center add-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/21.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Josue Smith</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title text-xs font-semibold">Josue Smith</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)"> Add</a>
+                          </div><a class="add-btn btn bg-gray-light p-2" href="javascript:void(0)"> Add</a>
                         </li>
                       </ul>
                     </div>
@@ -1263,29 +1272,29 @@
                     </div>
                     <div class="card-body">
                       <ul class="flex flex-col gap-3"> 
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center follow-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/18.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Abdul Volkman</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
+                              <p class="text-title text-xs font-semibold">Abdul Volkman</p><span class="text-content3 font-semibold text-2xs">Web Developer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)">Follow</a>
+                          </div><a class="follow-btn btn bg-gray-light p-2" href="javascript:void(0)">Follow</a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center follow-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/15.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Tiana Baumbach</p><span class="text-content3 font-semibold text-2xs">Web Designer</span>
+                              <p class="text-title text-xs font-semibold">Tiana Baumbach</p><span class="text-content3 font-semibold text-2xs">Web Designer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)">Follow</a>
+                          </div><a class="follow-btn btn bg-gray-light p-2" href="javascript:void(0)">Follow</a>
                         </li>
-                        <li class="flex justify-between items-center">
+                        <li class="flex justify-between items-center follow-friend">
                           <div class="flex items-center gap-2 w-full">
                             <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/20.png" alt="undefined"/></div>
                             <div class="w-[calc(100%_-_52px)]"> 
-                              <p class="text-title font-semibold text-xs">Patricia Kulas</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
+                              <p class="text-title text-xs font-semibold">Patricia Kulas</p><span class="text-content3 font-semibold text-2xs">Fullstack Developer</span>
                             </div>
-                          </div><a class="btn bg-gray-light py-1 px-2" href="javascript:void(0)">Follow</a>
+                          </div><a class="follow-btn btn bg-gray-light p-2" href="javascript:void(0)">Follow</a>
                         </li>
                       </ul>
                     </div>
